# webrtc-game

./: .gitignore  LICENSE
proto/: commands.proto  common.proto  commons.proto  entities_updates.proto  notifications.proto  player_actions.proto
webrtc-client/: LICENSE  README.md  package-lock.json  package.json  tsconfig.json  webpack.config.js
webrtc-client/src/: game.ts
webrtc-client/src/comms/: commands-encoder.ts  entities-updates-decoder.ts  player-actions-encoder.ts  webrtc-sender.ts  webrtc-server.ts
webrtc-client/src/components/: position-component.ts  random-movement-component.ts  sprite-component.ts
webrtc-client/src/controllers/: player-movement-controller.ts
webrtc-client/src/models/: player-model.ts  players-positions-model.ts
webrtc-client/src/presenters/: players-presenter.ts
webrtc-client/src/systems/: position-system.ts  random-movement-system.ts  sprite-system.ts
webrtc-client/src/utils/: pixi-container-utilities.ts  vector2-utilities.ts
webrtc-server/: .gitignore  Cargo.toml  README.md  build.rs  logger_config.yaml
webrtc-server/src/: lib.rs  main.rs
webrtc-server/src/comms/: commands_collector.rs  commands_decoder.rs  commands_parser.rs  entities_updates_encoder.rs  messenger.rs  mod.rs  player_actions_decoder.rs  player_actions_parser.rs  player_setups_encoder.rs  players_store.rs  ticker.rs
webrtc-server/src/game/: mod.rs  world.rs
webrtc-server/src/game/systems/: mod.rs  movement_system.rs
webrtc-server/src/html/: echo_server.html  html_server.rs  mod.rs
webrtc-server/src/messages/: mod.rs
(+3 files in other folders)
