[package]
name = "webrtc-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
path = "src/main.rs"
name = "webrtc-server"

[lib]
path = "src/lib.rs"

[dependencies]
webrtc-unreliable = "0.5.3"
log = "0.4"
log4rs = " 1.2"
clap = "2.32"
env_logger = "0.8"
futures = { version = "0.3" }
hyper = { version = "0.14", features = ["http1", "runtime", "server", "stream"] }
tokio = { version = "1.0", features = ["macros", "net", "rt-multi-thread", "time"] }

prost = "0.11.2"
prost-types = "0.11.2"

linked-hash-map = "0.5.6"
linked_hash_set = "0.1.4"

[build-dependencies]
prost-build = { version = "0.6" }